# Design-Rule-Checking-Engine

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  build.sh  docker-compose.yml
User Interface/: Cargo.toml  README.md
User Interface/src/: main.rs
UserInterface/: CMakeLists.txt  README.md
UserInterface/include/: MainWindow.h
UserInterface/src/: MainWindow.cpp
design/: design.plantuml
include/drc_system/: DRCEngine.hpp
include/drc_system/mocks/: MockDBObject.hpp  MockObserver.hpp
src/: DRCEngine.cpp  DRCViolation.cpp
tests/: CMakeLists.txt  test_db_object.cpp  test_drc_engine.cpp
